# modern-cpp-windows-driver-template

./: README.md
.github/: Invoke-VisualStudio.ps1
.github/workflows/: audit.yml  build.yml
Common/: Log.cpp  Log.hpp
DeviceDriver/: CMakeLists.txt  DeviceDriver.cpp
MiniFilter/: CMakeLists.txt
Scripts/: SignDriver.ps1
cmake/: FindWdk.cmake
